# python-package-template

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  RELEASE_PROCESS.md  dev-requirements.txt  pyproject.toml  setup-requirements.txt  setup.py
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.yml  feature_request.md  feature_request.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: ci.yml  main.yml  pr_checks.yml  setup.yml
docs/source/: conf.py  index.md  index.rst  installation.md
my_package/: __init__.py  version.py
scripts/: personalize.py  prepare_changelog.py  release_notes.py
